# Mini-Project

./: README.md
srcs/: CMakeLists.txt  main.cpp
srcs/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp
